moved constants back to file